force-app/main/default/objects/RetryableTask__c/RetryableTask__c.object-meta.xml
<CustomObject>
    <label>Retryable Task</label>
    <nameField>
        <displayFormat>ART-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retryable Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>