force-app/main/default/objects/RetryableTask__c/fields/TaskClassName__c.field-meta.xml
<CustomField>
    <fullName>TaskClassName__c</fullName>
    <description>The concrete class implementing this task</description>
    <label>Task Class Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>